--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+code {
+  @apply bg-muted text-orange-500 text-xs px-1 rounded whitespace-nowrap;
+}
